--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Build & Push Image
       run: |
         cd ./python
-        echo "${{ secrets.DOCKERPW }}" | docker login -u "jpiazza38" --password-stdin
+        echo "${{ secrets.DOCKERPW }}" | docker login -u jpiazza38 --password-stdin
         docker image build -t jpiazza38/gitops:hellov1.2 .
         docker push jpiazza38/gitops:hellov1.2
